# segmentation

./: .gitignore  Dockerfile  README.md  client.py  combine_masks.py  debug_gpu.py  docker-compose.yml  download_model.sh  example_nodejs_client.js  main.py  main_old.py  pyproject.toml  requirements.txt  test_endpoint.js
.github/workflows/: docker-publish.yml
notebooks/: .gitignore  export-test.ipynb
